// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeedsGradingQuestion matches snapshot with all graded students 1`] = `
<div
  className="sc-dIouRR dDtjZn"
>
  <div
    className="sc-hHLeRK gTEijY"
  >
    <button
      aria-expanded={true}
      className="sc-dmRaPn cjvqiR"
      onClick={[Function]}
    >
      <span
        className="sc-crXcEl jrEnlp"
      />
      <h3
        className="sc-kgflAQ icrCrO"
      >
        Question 
        2
      </h3>
    </button>
    <span
      className="sc-fLlhyt jiYUGd"
    >
      2
      /
      2
       Graded
    </span>
  </div>
  <div
    className="sc-llJcti jnzCxm"
  >
    <div
      className="sc-iIPllB ixviWC"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Describe Newton's first law.</p>",
        }
      }
    />
  </div>
  <div
    className="sc-gicCDI eLkWoA"
  >
    <button
      className="sc-cxabCf gmfzIb"
      onClick={[Function]}
    >
      Expand all answers
    </button>
  </div>
  <div
    className="sc-ezWOiH oWJnm"
  >
    <div
      className="sc-papXJ fqoXnn"
    >
      <button
        aria-expanded={false}
        className="sc-jqUVSM jfgTeu"
        onClick={[Function]}
      >
        <span
          className="sc-crXcEl XODye"
        />
        <span
          className="sc-kDDrLX huIAKc"
        >
          Ada Lovelace
        </span>
        <span
          className="sc-iqcoie cgZTnQ"
        >
          <strong>
            Points:
          </strong>
           
          8
           out of 
          10
        </span>
      </button>
    </div>
    <div
      className="sc-papXJ fqoXnn"
    >
      <button
        aria-expanded={false}
        className="sc-jqUVSM jfgTeu"
        onClick={[Function]}
      >
        <span
          className="sc-crXcEl XODye"
        />
        <span
          className="sc-kDDrLX huIAKc"
        >
          Grace Hopper
        </span>
        <span
          className="sc-iqcoie cgZTnQ"
        >
          <strong>
            Points:
          </strong>
           
          8
           out of 
          10
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NeedsGradingQuestion matches snapshot with mixed graded and ungraded students 1`] = `
<div
  className="sc-dIouRR dDtjZn"
>
  <div
    className="sc-hHLeRK gTEijY"
  >
    <button
      aria-expanded={true}
      className="sc-dmRaPn cjvqiR"
      onClick={[Function]}
    >
      <span
        className="sc-crXcEl jrEnlp"
      />
      <h3
        className="sc-kgflAQ icrCrO"
      >
        Question 
        1
      </h3>
    </button>
    <span
      className="sc-fLlhyt jiYUGd"
    >
      1
      /
      2
       Graded
    </span>
  </div>
  <div
    className="sc-llJcti jnzCxm"
  >
    <div
      className="sc-iIPllB ixviWC"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Describe Newton's first law.</p>",
        }
      }
    />
  </div>
  <div
    className="sc-gicCDI eLkWoA"
  >
    <button
      className="sc-cxabCf gmfzIb"
      onClick={[Function]}
    >
      Expand all answers
    </button>
  </div>
  <div
    className="sc-ezWOiH oWJnm"
  >
    <div
      className="sc-papXJ fqoXnn"
    >
      <button
        aria-expanded={true}
        className="sc-jqUVSM jfgTeu"
        onClick={[Function]}
      >
        <span
          className="sc-crXcEl jrEnlp"
        />
        <span
          className="sc-kDDrLX huIAKc"
        >
          Ada Lovelace
        </span>
        <span
          className="sc-iqcoie cgZTnQ"
        >
          <strong>
            Points:
          </strong>
           
          --
           out of 
          10
        </span>
      </button>
      <div
        className="sc-evZas cTOCWP"
      >
        <div
          className="sc-breuTD EtWdd"
        >
          <div
            className="sc-ksZaOG gvZIGE"
          >
            An object at rest stays at rest.
          </div>
        </div>
        <div
          className="sc-gsnTZi cSdbEu"
        >
          <div
            className="sc-dkzDqf gNmSNg"
          >
            <div
              className="sc-eCYdqJ ldOqjj"
            >
              <label
                className="sc-hKMtZM dwUXki"
                htmlFor="score-input"
              >
                Points
              </label>
              <input
                aria-label="Score"
                className="sc-jSMfEi iGMKCY"
                disabled={false}
                id="score-input"
                max={10}
                min={0}
                onChange={[Function]}
                placeholder="--"
                step={1}
                type="number"
                value=""
              />
              <span>
                out of 
                10
              </span>
            </div>
          </div>
          <div
            className="sc-dkzDqf gNmSNg"
          >
            <label
              className="sc-hKMtZM dwUXki"
              htmlFor="comment-input"
            >
              Comment
            </label>
            <textarea
              aria-label="Comment"
              className="sc-gKXOVf bbxjYD"
              disabled={false}
              id="comment-input"
              onChange={[Function]}
              placeholder="Enter feedback for the student..."
              value=""
            />
          </div>
          <div
            className="sc-iBkjds crHxek"
          >
            <button
              className="sc-bczRLJ fLTvYy"
              disabled={true}
              onClick={[Function]}
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-papXJ fqoXnn"
    >
      <button
        aria-expanded={false}
        className="sc-jqUVSM jfgTeu"
        onClick={[Function]}
      >
        <span
          className="sc-crXcEl XODye"
        />
        <span
          className="sc-kDDrLX huIAKc"
        >
          Grace Hopper
        </span>
        <span
          className="sc-iqcoie cgZTnQ"
        >
          <strong>
            Points:
          </strong>
           
          9
           out of 
          10
        </span>
      </button>
    </div>
  </div>
</div>
`;
